# MLH-Hackathons-API

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/controller/: date_parser.py  events.py  utils.py
app/data/: events.json
app/models/: events.py
tests/: test_mlh_events_api.py
