[tool.poetry]
name = "mlh_events_api"
version = "0.1.0"
description = ""
authors = ["DukeNgn <triduc2311m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
black = "^22.6.0"
requests = "^2.28.1"
pendulum = "^2.1.2"
fastapi = "^0.78.0"
APScheduler = "^3.9.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
